@@ -1,5 +1,7 @@
 Revision history for Perl extension AnyEvent.
 
+	- speed up AnyEvent::Socket::format_address and ::format_ipv6.
+
 5.24  Tue Jan  5 11:39:43 CET 2010
 	- cygwin never reports errors from failed connects. 1.5 just gives
           you continous readyness and EAGAIN, 1.7 is even more broken and
